--- a/Orderly.Client/Pages/Chats/Order.razor
+++ b/Orderly.Client/Pages/Chats/Order.razor
@@ -136,8 +136,8 @@ else
         get
         {
             return (IsSeller
-                ? CurrentOrder?.ProductOwnerDisplayName
-                : CurrentOrder?.CustomerDisplayName) ?? string.Empty;
+                ? CurrentOrder?.CustomerDisplayName
+                : CurrentOrder?.ProductOwnerDisplayName) ?? string.Empty;
         }
     }
 
